Se incluyó el método eliminar en la clase árbol

--- a/Lab04_EDI/Lab04_EDI.csproj
+++ b/Lab04_EDI/Lab04_EDI.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Arbol\Arbol.csproj" />
+    <ProjectReference Include="..\ListaDobleEnlace\ListaDobleEnlace.csproj" />
+    <ProjectReference Include="..\THash\THash.csproj" />
+  </ItemGroup>
+
 </Project>
